<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCourse">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/termDropdown"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextView"
                        android:layout_width="359dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:inputType="none"
                        android:text="Choose a Term" />
                </com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:id="@+id/courseTitleInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="44dp"
                    android:hint="Enter Course Title"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/termDropdown" />

                <EditText
                    android:id="@+id/courseInstructorNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:hint="Enter Course Instructor Name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/courseTitleInput"

                    />

                <EditText
                    android:id="@+id/courseInstructorEmailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:hint="Enter Course Instructor Email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/courseInstructorNameInput"

                    />

                <EditText
                    android:id="@+id/courseInstructorPhoneInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="60dp"
                    android:ems="10"
                    android:hint="Enter Course Instructor Phone Number"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toBottomOf="@id/courseInstructorEmailInput" />

                <!--    <EditText-->
                <!--        android:id="@+id/courseStatusInput"-->
                <!--        android:layout_width="match_parent"-->
                <!--        android:layout_height="wrap_content"-->
                <!--        android:hint="Enter Course Status"-->
                <!--        android:ems="10"-->
                <!--        app:layout_constraintStart_toStartOf="parent"-->
                <!--        android:layout_margin="10dp"-->
                <!--        app:layout_constraintTop_toBottomOf="@id/courseInstructorPhoneInput"-->
                <!--        />-->

                <TextView
                    android:id="@+id/textView_course_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Select Course Status:"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/courseInstructorPhoneInput" />

                <RadioGroup
                    android:id="@+id/status_course_radiogroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_course_status">

                    <RadioButton
                        android:id="@+id/radio_course_in_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/inProgress" />

                    <RadioButton
                        android:id="@+id/radio_course_completed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/completed" />

                    <RadioButton
                        android:id="@+id/radio_course_dropped"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/dropped" />

                    <RadioButton
                        android:id="@+id/radio_course_plantotake"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/planToTake" />

                </RadioGroup>


                <!--    <EditText-->
                <!--        android:id="@+id/courseStartDateInput"-->
                <!--        android:layout_width="match_parent"-->
                <!--        android:layout_height="wrap_content"-->
                <!--        android:hint="Enter Course Start Date"-->
                <!--        android:ems="10"-->
                <!--        app:layout_constraintStart_toStartOf="parent"-->
                <!--        android:layout_margin="10dp"-->
                <!--        app:layout_constraintTop_toBottomOf="@id/courseStatusInput"-->

                <!--        />-->

                <!--    <EditText-->
                <!--        android:id="@+id/courseEndDateInput"-->
                <!--        android:layout_width="match_parent"-->
                <!--        android:layout_height="wrap_content"-->
                <!--        android:layout_margin="10dp"-->
                <!--        android:layout_marginStart="8dp"-->
                <!--        android:layout_marginTop="128dp"-->
                <!--        android:ems="10"-->
                <!--        android:hint="Enter Course End Date"-->

                <!--        app:layout_constraintStart_toStartOf="parent"-->
                <!--        app:layout_constraintTop_toBottomOf="@id/courseStartDateInput" />-->

                <TextView
                    android:id="@+id/textViewCourseStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Select Start Date:"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/status_radiogroup" />

                <Button
                    android:id="@+id/courseStartDatePickerButton"
                    style="?android:spinnerStyle"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:onClick="openCourseStartDatePicker"
                    android:text="JAN 01 2020"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewCourseStartDate" />

                <TextView
                    android:id="@+id/textViewCourseEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Select End Date:"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/courseStartDatePickerButton" />

                <Button
                    android:id="@+id/courseEndDatePickerButton"
                    style="?android:spinnerStyle"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:onClick="openCourseEndDatePicker"
                    android:text="JAN 01 2020"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewCourseEndDate" />


                <EditText
                    android:id="@+id/courseNoteInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="128dp"
                    android:ems="10"
                    android:hint="Enter Course Note"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/courseEndDatePickerButton" />

                <EditText
                    android:id="@+id/courseSpace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="128dp"
                    android:ems="10"
                    android:hint="na"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/courseNoteInput" />


            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="Save" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>